# Student_Calendar

./: CMakeLists.txt  Makefile.mak  main.c
Headers/: Auxiliary.h  CLine.h  DateTime.h  Saves.h  SubjectLesson.h
Source/: Auxiliary.c  CLine.c  DateTime.c  Saves.c  SubjectLesson.c
